added docs with mermaid